[fix] isolate google maps for dark mode mask

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -572,7 +572,7 @@ html body footer.footer {
     background-color: var(--page-bg);
     color: var(--primary-text);
   };
-  .container.d-flex.flex-column.align-items-center.justify-content-center.mt-4 :not(.card.shadow-sm.border.rounded.mt-2) {
+  .container.d-flex.flex-column.align-items-center.justify-content-center.mt-4 > *:not(.card.shadow-sm.border.rounded.mt-2) {
     background-color: var(--page-bg);
     color: var(--primary-text);
 
